syntax = "proto3";


message PlanetState { // Next = 2
  string id = 1;
}