syntax = "proto3";
import "nova/src/proto/system_state_value.proto";
import "nova/src/proto/space_object_state.proto";
import "nova/src/proto/map_keys.proto";

message SystemState { // Next = 4
  SystemStateValue value = 1;
  map<string, SpaceObjectState> spaceObjects = 2;
  MapKeys spaceObjectsKeys = 3;
}